--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>HER ŞEY BURADA WEB</title>
+<link href="stil.css" rel="stylesheet">    
+</head>
+    
+<body>
+ 
+<div class="sayfa">
+    <div class="ust">
+    <a id="baslik" href="#">
+    <h1>1116 Gökdeniz SAKALLI</h1>
+    </a>
+    <ul id="menu">
+    <li><a href="index.html">Anasayfa</a></li>
+    <li><a href="Hakkımızda.html">Hakkımızda</a></li>
+    <li><a href="Projelerimiz.html">Projelerimiz</a></li>
 
+    <li><a href="bizeulasin.html">İletişim Bilgilerimiz</a></li>   
+    </ul>
+        <div class="temizle"></div>
+    </div>
+    <div class="orta">
+    <div class="orta-sol">
+    <img src="hack.jpg" width="450" height="370">    
+    </div>
+    <div class="orta-sag">
+        <h1>SİTEMİZE HOŞGELDİNİZ KEYİFLİ GEZİNTİLER</h1>
+        <p> </p>
+        <p>ARZ EDERİZ&nbsp;</p>
+
+    </div>
+        <div class="temizle"></div>
+    </div>
+    <div class="alt">
+    <p>
+            <a href="index.html">Anasayfa</a> | <a href="Hakkımızda.html">Hakkımızda</a> | <a href="Projelerimiz.html">Projelerimiz</a> |   <a href="bizeulasin.html">İletişim Bilgilerimiz</a></p><!-- 
+            <ul id="alt-menu">
+            <li><a href="#">Anasayfa</a>  <li>
+            <li><a href="#">Hakkımızda</a></li>
+            <li><a href="#">Projelerimiz</a></li>
+            <li><a href="#" class="aktif">Yazılar</a></li>
+            <li><a href="#">İletişim Bilgilerimiz</a></li>
+            </ul> -->
+
+            <div class="temizle"></div>
+    </div>
+</div>       
+</body>
+</html>
+ 
